Fix: Wrong position when click index link

--- a/src/components/ProjectPage/ProjectContent/ProjectContent.scss
+++ b/src/components/ProjectPage/ProjectContent/ProjectContent.scss
@@ -1,3 +1,8 @@
+.project-content {
+  margin-top: -66px;
+  padding-top: 66px;
+}
+
 .project-content-container {
   width: 900px;
   margin-left: 332px;
