--- a/src/components/ProjectPage/ProjectNav/ProjectNav.scss
+++ b/src/components/ProjectPage/ProjectNav/ProjectNav.scss
@@ -5,6 +5,7 @@
   box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   position: fixed;
+  margin-top: 66px;
 }
 
 .project-nav-image {
